<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.chartracker.characters.EditCharacterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit_characters_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/edit_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/edit_characters_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_characters_title"
            app:layout_constraintBottom_toTopOf="@+id/edit_character_cancel"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".stories.EditCharacterFragment">

            <LinearLayout
                android:id="@+id/edit_characters_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/edit_character_name_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edit_character_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/name_hint"
                    android:inputType="text|textPersonName"
                    android:text="@{viewModel.character.name.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_aliases_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aliases" />

                <EditText
                    android:id="@+id/edit_character_aliases"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/aliases_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.aliases.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_titles_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titles" />

                <EditText
                    android:id="@+id/edit_character_titles"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/titles_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.titles.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_age_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <EditText
                    android:id="@+id/edit_character_age"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/age_hint"
                    android:inputType="number"
                    android:text="@{viewModel.character.age.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_home_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home" />

                <EditText
                    android:id="@+id/edit_character_home"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/home_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.home.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_gender_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <EditText
                    android:id="@+id/edit_character_gender"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/gender_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.gender.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_race_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/race" />

                <EditText
                    android:id="@+id/edit_character_race"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/race_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.race.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_livingOrDead_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/living_dead" />

                <EditText
                    android:id="@+id/edit_character_livingOrDead"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/living_dead_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.livingOrDead.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_occupation_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/occupation" />

                <EditText
                    android:id="@+id/edit_character_occupation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/occupation_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.occupation.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_weapons_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weapon" />

                <EditText
                    android:id="@+id/edit_character_weapons"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/weapon_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.weapons.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_toolsEquipment_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tools_equipment" />

                <EditText
                    android:id="@+id/edit_character_toolsEquipment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/tools_equipment_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.toolsEquipment.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_bio_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio" />

                <EditText
                    android:id="@+id/edit_character_bio"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/bio_hint"
                    android:inputType="textMultiLine"
                    android:text="@{viewModel.character.bio.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_faction_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faction" />

                <EditText
                    android:id="@+id/edit_character_faction"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/faction_hint"
                    android:inputType="text"
                    android:text="@{viewModel.character.faction.toString()}"/>

                <TextView
                    android:id="@+id/edit_character_allies_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allies" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/edit_character_allies_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin"/>

                <TextView
                    android:id="@+id/edit_character_enemies_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enemies" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/edit_character_enemies_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin"/>

                <TextView
                    android:id="@+id/edit_character_neutral_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/neutral" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/edit_character_neutral_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin"/>


            </LinearLayout>


        </ScrollView>

        <Button
            android:id="@+id/edit_character_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit_character_submit"
            app:layout_constraintStart_toEndOf="@+id/edit_characters_scroll"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{() -> viewModel.onEditCharacterNavigate()}"/>

        <Button
            android:id="@+id/edit_character_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="@+id/edit_character_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_character_cancel"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>