<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.chartracker.stories.AddStoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/add_stories_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/add_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ScrollView
            android:id="@+id/add_stories_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_stories_title"
            app:layout_constraintBottom_toTopOf="@+id/add_stories_submit"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".stories.AddStoryFragment">

            <LinearLayout
                android:id="@+id/add_stories_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/add_story_image"
                    android:layout_width="@dimen/add_image_width"
                    android:layout_height="@dimen/add_image_height"
                    android:contentDescription="@string/story_image_desc"
                    tools:src="@tools:sample/avatars" />

                <Button
                    android:id="@+id/add_story_select_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_image" />

                <TextView
                    android:id="@+id/add_story_title_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/add_story_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/title_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/add_story_author_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author" />

                <EditText
                    android:id="@+id/add_story_author"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/author_hint"
                    android:inputType="text|textPersonName" />

                <TextView
                    android:id="@+id/add_story_genre_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre" />

                <EditText
                    android:id="@+id/add_story_genre"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/genre_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/add_story_type_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <EditText
                    android:id="@+id/add_story_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_text_height"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:autofillHints=""
                    android:hint="@string/type_hint"
                    android:inputType="text" />



            </LinearLayout>


        </ScrollView>

        <Button
            android:id="@+id/add_stories_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>