<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_bar_delete"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_bar_overflow"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/overflow_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_bar_settings"
                android:icon="@drawable/baseline_settings_24"
                android:title="@string/settings"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>