<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.chartracker.auth.UpdateEmailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/update_email_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_email"
            app:layout_constraintBottom_toTopOf="@+id/update_email_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/update_email_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_update_instructions"
            app:layout_constraintBottom_toTopOf="@id/update_email_current_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_email_header" />

        <TextView
            android:id="@+id/update_email_current_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_email_header"
            app:layout_constraintBottom_toTopOf="@+id/update_email_current_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_email_instructions" />

        <TextView
            android:id="@+id/update_email_current_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/update_email_new_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_email_current_header"
            tools:layout_editor_absoluteX="163dp"
            tools:text="Current Email" />

        <TextView
            android:id="@+id/update_email_new_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_email"
            app:layout_constraintBottom_toTopOf="@+id/update_email_new_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_email_current_email"
            tools:layout_editor_absoluteX="157dp" />

        <EditText
            android:id="@+id/update_email_new_input"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_text_height"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/update_email_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_email_new_header"
            tools:layout_editor_absoluteX="101dp" />

        <Button
            android:id="@+id/update_email_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_email_new_input" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>